make-a-wish-salesforce/src/objects/Role__c.object
<CustomObject>
    <description>This custom object would store the Roles for the volunteer that the Chapter offers.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Display description for each chapter role.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked then that Role wouldn&apos;t show on the Application.</description>
        <label>Exclude from Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Moved_to_Historical_by_Volunteer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box indicate if the role is moved to historical or not.</description>
        <label>Move to Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isWishRole__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identify whether the role is wish or non wish</description>
        <label>isWishRole</label>
        <type>Checkbox</type>
    </fields>
    <label>Role</label>
    <nameField>
        <label>Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Roles</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>